# icon-ruc

./: .env.example  .gitignore  CLAUDE.md  CRITICAL_BUG_FIX.md  DEPLOYMENT.md  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  PRECIPITATION_RATE_DISPLAY.md  QUICK_START.md  README.md  README_bratislava.md  README_dashboard.md  README_simple.md  api.py  bratislava_browser.ipynb  bratislava_pipeline_v2.py  bratislava_pipeline_v2.py.DEPRECATED  cleanup.py  cleanup_manager.py  config.py  convert_to_weather_format.py  create_demo_structure.py  create_ensemble_qgis.py  create_qgis_demo.py  create_qgis_sample.py  dashboard.html  db_migrations_prod.sql  db_schema.sql  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix_t22_complete.py  fix_t22_json.py  gunicorn.conf.py  index.html  main.py  netcdf_to_json.py  progress-components-example.html  requirements-dev.txt  requirements-prod.txt  (+20 more)
.claude/: settings.local.json
extract_rs/: Cargo.toml  pyproject.toml
extract_rs/src/: lib.rs
migrations/: 001_add_variables_support.sql
monitoring/: alert_rules.yml  blackbox.yml  loki-config.yml  prometheus.yml  promtail-config.yml
nginx/: default.conf  nginx.conf
pipeline/: __init__.py  config.py  discover.py  download.py  extract.py  grid.py  run.py  stats.py
scripts/: backup-restore.sh  deploy.sh  logrotate.conf
tests/: test_extract.py  test_grid.py  test_stats.py
utils/: __init__.py  base_processor.py  data_io.py  discovery.py  download.py  extraction.py  grid.py  models.py  orchestration.py  pipeline_orchestrator.py  precipitation.py  processing.py  (+3 more)
(+589 files in other folders)
